# polynomial-roots

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
source/: CMakeLists.txt  cubic_roots.hpp  quadratic_roots.hpp  quartic_roots.hpp  root_pair.hpp  small_integral_powers.hpp
tests/: CMakeLists.txt  cubic_tests.cpp  quartic_tests.cpp
